<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WelcomeScreen">

    <TextView
        android:id="@+id/WELCOME"
        android:layout_width="296dp"
        android:layout_height="93dp"
        android:text="@string/welcome"
        android:textAlignment="center"
        android:textSize="60sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.211" />

    <Button
        android:id="@+id/test"
        android:layout_width="143dp"
        android:layout_height="67dp"
        android:layout_marginStart="32dp"
        android:text="@string/create"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/WELCOME"
        app:layout_constraintVertical_bias="0.509" />

    <Button
        android:id="@+id/exisitingButton"
        android:layout_width="143dp"
        android:layout_height="67dp"
        android:layout_marginEnd="24dp"
        android:text="@string/exisiting"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.768"
        app:layout_constraintStart_toEndOf="@+id/test"
        app:layout_constraintTop_toBottomOf="@+id/WELCOME"
        app:layout_constraintVertical_bias="0.509" />

</androidx.constraintlayout.widget.ConstraintLayout>